feat: add telephone and mobile phone to workcontacts
