# app/src/main/resources/swagger/api-docs.json
@@ -417,6 +417,21 @@
         },
         "description" : "A list of invalid parameters details."
       },
+      "MobilePhoneCertifiableSchema" : {
+        "type" : "object",
+        "description" : "Person work mobile phone number",
+        "properties" : {
+          "certification" : {
+            "type" : "string",
+            "description" : "Certified source of information"
+          },
+          "value" : {
+            "type" : "string",
+            "description" : "Field value"
+          }
+        },
+        "required" : [ "certification", "value" ]
+      },
       "MutableUserFieldsDto" : {
         "type" : "object",
         "properties" : {
@@ -524,6 +539,21 @@
           }
         }
       },
+      "TelephoneCertifiableSchema" : {
+        "type" : "object",
+        "description" : "Person work telephone number",
+        "properties" : {
+          "certification" : {
+            "type" : "string",
+            "description" : "Certified source of information"
+          },
+          "value" : {
+            "type" : "string",
+            "description" : "Field value"
+          }
+        },
+        "required" : [ "certification", "value" ]
+      },
       "UserId" : {
         "required" : [ "id" ],
         "type" : "object",
@@ -584,6 +614,12 @@
         "properties" : {
           "email" : {
             "$ref" : "#/components/schemas/EmailCertifiableSchema"
+          },
+          "mobilePhone" : {
+            "$ref" : "#/components/schemas/MobilePhoneCertifiableSchema"
+          },
+          "telephone" : {
+            "$ref" : "#/components/schemas/TelephoneCertifiableSchema"
           }
         },
         "description" : "User work contacts"
