# connector-api/src/main/java/it/pagopa/pdv/user_registry/connector/model/WorkContactResource.java
@@ -6,5 +6,7 @@ import lombok.Data;
 public class WorkContactResource {
 
     private CertifiableField<String> email;
+    private CertifiableField<String> mobilePhone;
+    private CertifiableField<String> telephone;
 
 }
